// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading correctly 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-19"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-21 mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <button
          aria-label="open drawer"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-22 MuiIconButton-colorInherit MuiIconButton-edgeStart"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap"
        >
          Your Portfolio
        </h6>
      </div>
    </header>
    <nav
      aria-label="mailbox folders"
      class="makeStyles-drawer-20"
    />
    <main
      class="makeStyles-content-25"
    >
      <div
        class="makeStyles-toolbar-23"
      />
      <h2
        class="MuiTypography-root MuiTypography-h5"
      >
        Recent Shifts
      </h2>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-26 MuiTypography-body1 MuiTypography-gutterBottom"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-27 MuiTypography-h5"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-28 MuiTypography-body1 MuiTypography-colorTextSecondary"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-26 MuiTypography-body1 MuiTypography-gutterBottom"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-27 MuiTypography-h5"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-28 MuiTypography-body1 MuiTypography-colorTextSecondary"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-26 MuiTypography-body1 MuiTypography-gutterBottom"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-27 MuiTypography-h5"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-28 MuiTypography-body1 MuiTypography-colorTextSecondary"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-26 MuiTypography-body1 MuiTypography-gutterBottom"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-27 MuiTypography-h5"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-28 MuiTypography-body1 MuiTypography-colorTextSecondary"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`renders successful load correctly 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-33"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-35 mui-fixed MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <button
          aria-label="open drawer"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-menuButton-36 MuiIconButton-colorInherit MuiIconButton-edgeStart"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <h6
          class="MuiTypography-root MuiTypography-h6 MuiTypography-noWrap"
        >
          Your Portfolio
        </h6>
      </div>
    </header>
    <nav
      aria-label="mailbox folders"
      class="makeStyles-drawer-34"
    />
    <main
      class="makeStyles-content-39"
    >
      <div
        class="makeStyles-toolbar-37"
      />
      <h2
        class="MuiTypography-root MuiTypography-h5"
      >
        Recent Shifts
      </h2>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-43 makeStyles-trimText-44 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
              >
                2 February 2020
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-44 MuiTypography-h5"
              >
                Test Shift 2
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-45 makeStyles-trimText-44 MuiTypography-body1 MuiTypography-colorTextSecondary"
              >
                Test Location 2
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                Role: AFA
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                Logged Calls: 4
              </p>
            </div>
            <div
              class="MuiCardActions-root MuiCardActions-spacing"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/editShift/abcfef"
              >
                <span
                  class="MuiButton-label"
                >
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/addJob?shift=abcfef"
              >
                <span
                  class="MuiButton-label"
                >
                  Add Job
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/jobs?shiftId=abcfef"
              >
                <span
                  class="MuiButton-label"
                >
                  Show Jobs
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-43 makeStyles-trimText-44 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
              >
                3 January 2020
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-44 MuiTypography-h5"
              >
                Test Shift 3
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-45 makeStyles-trimText-44 MuiTypography-body1 MuiTypography-colorTextSecondary"
              />
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                Role: CRU
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                Logged Calls: 4
              </p>
            </div>
            <div
              class="MuiCardActions-root MuiCardActions-spacing"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/editShift/abcgef"
              >
                <span
                  class="MuiButton-label"
                >
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/addJob?shift=abcgef"
              >
                <span
                  class="MuiButton-label"
                >
                  Add Job
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/jobs?shiftId=abcgef"
              >
                <span
                  class="MuiButton-label"
                >
                  Show Jobs
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-6 MuiGrid-grid-lg-3"
        >
          <div
            class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiCardContent-root"
            >
              <p
                class="MuiTypography-root makeStyles-date-43 makeStyles-trimText-44 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
              >
                1 January 2020
              </p>
              <h2
                class="MuiTypography-root makeStyles-trimText-44 MuiTypography-h5"
              >
                Test Shift 1
              </h2>
              <p
                class="MuiTypography-root makeStyles-location-45 makeStyles-trimText-44 MuiTypography-body1 MuiTypography-colorTextSecondary"
              >
                Test Location 1
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                Role: EAC
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                Logged Calls: 4
              </p>
            </div>
            <div
              class="MuiCardActions-root MuiCardActions-spacing"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/editShift/abcdef"
              >
                <span
                  class="MuiButton-label"
                >
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/addJob?shift=abcdef"
              >
                <span
                  class="MuiButton-label"
                >
                  Add Job
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
              <div
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSizeSmall MuiButton-sizeSmall"
                role="button"
                tabindex="0"
                to="/jobs?shiftId=abcdef"
              >
                <span
                  class="MuiButton-label"
                >
                  Show Jobs
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
